--- a/terraform-init/action.yml
+++ b/terraform-init/action.yml
@@ -26,9 +26,9 @@ runs:
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v4
       with:
-        role-to-assume: ${{ inputs.aws_oidc_role }}
+        role-to-assume: ${{ inputs.aws-oidc-role }}
         role-session-name: github-oidc
-        aws-region: ${{ inputs.aws_region }}
+        aws-region: ${{ inputs.aws-region }}
 
     - name: Terraform Init
       shell: bash
