--- a/terraform-init/action.yml
+++ b/terraform-init/action.yml
@@ -1,6 +1,10 @@
 name: Terraform Init
 description: Composite action to checkout code and run Terraform init
 
+permissions:
+  id-token: write
+  contents: read
+
 inputs:
   working-directory:
     description: Directory where Terraform code is located
