--- a/terraform-init/action.yml
+++ b/terraform-init/action.yml
@@ -37,3 +37,11 @@ runs:
     - name: Terraform Init
       shell: bash
       run: terraform -chdir=${{ inputs.working-directory }} init -input=false
+
+    - name: Terraform Validate
+      shell: bash
+      run: terraform -chdir=${{ inputs.working-directory }} validate
+
+    - name: Terraform Plan
+      shell: bash
+      run: terraform -chdir=${{ inputs.working-directory }} plan
