--- a/terraform-init/action.yml
+++ b/terraform-init/action.yml
@@ -1,10 +1,6 @@
 name: Terraform Init
 description: Composite action to checkout code and run Terraform init
 
-# permissions:
-#   id-token: write
-#   contents: read
-
 inputs:
   working-directory:
     description: Directory where Terraform code is located
@@ -13,11 +9,19 @@ inputs:
 
   aws-oidc-role:
     description: AWS OIDC Role
-    required: true
+    required: false
 
   aws-region:
     description: AWS Region (for backend and provider)
-    required: true
+    required: false
+
+  aws-access-key-id:
+    description: AWS Access Key ID. Provide this key if you want to assume a role using access keys rather than a web identity token.
+    required: false
+
+  aws-secret-access-key:
+    description: AWS Secret Access Key. Required if aws-access-key-id is provided.
+    required: false
 
   modules-private-keys:
     description: AWS Region (for backend and provider)
@@ -37,6 +41,8 @@ runs:
       with:
         role-to-assume: ${{ inputs.aws-oidc-role }}
         role-session-name: github-oidc
+        aws-access-key-id: ${{ inputs.aws-access-key-id }}
+        aws-secret-access-key: ${{ inputs.aws-secret-access-key }}
         aws-region: ${{ inputs.aws-region }}
 
     - name: Setup Terraform Modules Private Keys
