--- a/terraform-init/action.yml
+++ b/terraform-init/action.yml
@@ -7,8 +7,8 @@ inputs:
     required: false
     default: .
 
-  aws-oidc-role:
-    description: AWS OIDC Role
+  aws-role-to-assume:
+    description: AWS Role to assume. Required for OIDC.
     required: false
 
   aws-region:
@@ -39,7 +39,7 @@ runs:
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v4
       with:
-        role-to-assume: ${{ inputs.aws-oidc-role }}
+        role-to-assume: ${{ inputs.aws-role-to-assume }}
         role-session-name: github-oidc
         aws-access-key-id: ${{ inputs.aws-access-key-id }}
         aws-secret-access-key: ${{ inputs.aws-secret-access-key }}
