--- a/.github/workflows/terraform-validate-pipeline.yaml
+++ b/.github/workflows/terraform-validate-pipeline.yaml
@@ -37,14 +37,18 @@ permissions:
 jobs:
   set-working-directory-values:
     runs-on: ubuntu-latest
+    outputs:
+      output1: ${{ steps.set-input.outputs.dirs || steps.detect-changes.outputs.dirs }}
     steps:
       - name: Use input directories
+        id: set-input
         if: ${{ inputs.dirs != '' }}
         run: |
           echo "Using input directories: ${{ inputs.dirs }}"
           echo "dirs=${{ inputs.dirs }}" >> $GITHUB_OUTPUT
 
       - name: Detect changed directories (fallback)
+        id: detect-changes
         if: ${{ inputs.dirs == '' }}
         uses: luiz-patire-vigil/actions-test/.github/actions/detect-terraform-changes@main
 
