--- a/.github/actions/terraform-parse-directory-input/action.yml
+++ b/.github/actions/terraform-parse-directory-input/action.yml
@@ -16,6 +16,7 @@ runs:
   using: "composite"
   steps:
     - name: Use input directories
+      shell: bash
       id: set-input
       if: ${{ inputs.dirs != '' }}
       run: |
