--- a/.github/actions/terraform-plan-summary-for-pr/action.yml
+++ b/.github/actions/terraform-plan-summary-for-pr/action.yml
@@ -13,6 +13,8 @@ runs:
     - name: Terraform Plan
       id: plan
       uses: luiz-patire-vigil/actions-test/.github/actions/terraform-plan@main
+      with:
+        working-directory: ${{ inputs.working-directory }}
 
     - name: Comment on Pull Request
       uses: actions/github-script@v7
