--- a/.github/actions/terraform-plan-summary-for-pr/action.yml
+++ b/.github/actions/terraform-plan-summary-for-pr/action.yml
@@ -20,19 +20,21 @@ runs:
       uses: actions/github-script@v7
       with:
         script: |
+          const author = 'github-actions';
+          
           // List all comments
           const { data: comments } = await github.rest.issues.listComments({
-            context.repo.owner,
-            context.repo.repo,
             issue_number: context.issue.number,
+            owner: context.repo.owner,
+            repo: context.repo.repo,
           });
 
           // Filter out comments made by the bot and delete them
           const botComments = comments.filter(comment => comment.user.login === author);
           for (const comment of botComments) {
             await github.rest.issues.deleteComment({
-              context.repo.owner,
-              context.repo.repo,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
               comment_id: comment.id,
             });
           }
