--- a/.github/actions/terraform-init/action.yml
+++ b/.github/actions/terraform-init/action.yml
@@ -1,5 +1,5 @@
 name: Terraform Init
-description: Composite action to checkout code and run Terraform init
+description: Setup terraform, authentication and run init on a Terraform directory
 
 # Workflows using this action need the following permissions:
 # permissions:
@@ -8,7 +8,7 @@ description: Composite action to checkout code and run Terraform init
 
 inputs:
   working-directory:
-    description: Directory where Terraform code is located
+    description: Directory where Terraform code is located.
     required: false
     default: .
 
@@ -17,7 +17,7 @@ inputs:
     required: false
 
   aws-region:
-    description: AWS Region (for backend and provider)
+    description: AWS Region (for backend and provider).
     required: false
 
   aws-access-key-id:
@@ -29,18 +29,19 @@ inputs:
     required: false
 
   modules-private-keys:
-    description: AWS Region (for backend and provider)
+    description: Private key for TF to access the one-terraform-modules repository.
     required: false
     default: null
 
 runs:
-  using: "composite"
+  using: composite
   steps:
     - name: Set up Terraform
       uses: hashicorp/setup-terraform@v3
       with:
-        terraform_version: 1.12.1
+        terraform_version: 1.12.2
 
+    # We allow two authentications: OIDC and Secret Key
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v4
       with:
@@ -50,6 +51,7 @@ runs:
         aws-secret-access-key: ${{ inputs.aws-secret-access-key }}
         aws-region: ${{ inputs.aws-region }}
 
+    # This Private Key (Deploy Key) is for TF to access the one-terraform-modules
     - name: Setup Terraform Modules Private Keys
       if: ${{ inputs.modules-private-keys != '' && inputs.modules-private-keys != null }}
       uses: webfactory/ssh-agent@v0.9.0
@@ -59,11 +61,3 @@ runs:
     - name: Terraform Init
       shell: bash
       run: terraform -chdir=${{ inputs.working-directory }} init -input=false
-
-    - name: Terraform Format
-      shell: bash
-      run: terraform -chdir=${{ inputs.working-directory }} fmt -check -recursive
-
-    - name: Terraform Validate
-      shell: bash
-      run: terraform -chdir=${{ inputs.working-directory }} validate
