--- a/.github/workflows/terraform-validate-pipeline.yaml
+++ b/.github/workflows/terraform-validate-pipeline.yaml
@@ -1,5 +1,10 @@
 name: Validate Terraform on Push
 
+# Workflows calling this workflow should set
+# permissions:
+#   id-token: write
+#   contents: read
+
 on:
   workflow_call:
     inputs:
@@ -15,7 +20,7 @@ on:
         required: false
 
       aws-region:
-        description: AWS Region (for backend and provider)
+        description: AWS Region (for backend and provider).
         required: false
 
       aws-access-key-id:
@@ -27,7 +32,7 @@ on:
         required: false
 
       modules-private-keys:
-        description: AWS Region (for backend and provider)
+        description: Private key for TF to access the one-terraform-modules repository. 
         required: false
 
 permissions:
