--- a/.github/actions/terraform-plan/action.yml
+++ b/.github/actions/terraform-plan/action.yml
@@ -1,5 +1,5 @@
-name: Terraform Init
-description: Composite action to checkout code and run Terraform init
+name: Terraform Plan
+description: Composite action to run Terraform plant, giving it as an output.
 
 # Workflows using this action need the following permissions:
 # permissions:
@@ -8,13 +8,13 @@ description: Composite action to checkout code and run Terraform init
 
 inputs:
   working-directory:
-    description: Directory where Terraform code is located
+    description: Directory where Terraform code is located.
     required: false
     default: .
 
 outputs:
   plan:
-    description: Modified directories
+    description: Modified directories.
     value: ${{ steps.tf-plan.outputs.stdout }}
 
 runs:
